--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -30,6 +30,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="StackExchange.Redis">
       <HintPath>..\externals\StackExchange.Redis.dll</HintPath>
     </Reference>
@@ -49,10 +50,14 @@
     <Compile Include="ITaskHandler.cs" />
     <Compile Include="Lua.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RedisTests.cs" />
     <Compile Include="SImpleResultHandler.cs" />
     <Compile Include="Task.cs" />
     <Compile Include="Workflow.cs" />
     <Compile Include="WorkloadManagement.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
