Exception wrapping for off-thread SE.R callbacks
Problem with hitting an exception during workflow operations is -- can
we work out what state everything's been left in? Might be best left to
client, who can decide whether to reset the workflow, or just close down
gracefuly.

--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -47,12 +47,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BadLua.cs" />
     <Compile Include="BasicWorkflowTests.cs" />
     <Compile Include="Behaviours.cs" />
     <Compile Include="Direct.cs" />
+    <Compile Include="ILua.cs" />
     <Compile Include="IResultHandler.cs" />
     <Compile Include="ITaskHandler.cs" />
     <Compile Include="TaskDetails.cs" />
+    <Compile Include="TestCase.cs" />
     <Compile Include="WorkflowDetails.cs" />
     <Compile Include="WorkflowHandler.cs" />
     <Compile Include="Lua.cs" />
