Add internal consistency checks for Workflow

--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -61,6 +61,7 @@
     <Compile Include="TaskType.cs" />
     <Compile Include="TestCase.cs" />
     <Compile Include="WorkflowDetails.cs" />
+    <Compile Include="WorkflowException.cs" />
     <Compile Include="WorkflowHandler.cs" />
     <Compile Include="Lua.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
